docs/envoy/v1.37.0/_sources/intro/arch_overview/security/external_dep_dataplane_ext.rst.txt
External dependencies: ``dataplane_ext``
========================================


envoy.access_loggers.extension_filters.cel
------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.access_loggers.wasm
-------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c8868da <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c8868da77499d414f3dcd07e4fbe584dc9a1c30d>`__, 2025-11-24, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/c8868da77499d414f3dcd07e4fbe584dc9a1c30d/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `dc4f37e <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e>`__, 2024-08-05, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e/LICENSE>`__


envoy.bootstrap.wasm
--------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c8868da <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c8868da77499d414f3dcd07e4fbe584dc9a1c30d>`__, 2025-11-24, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/c8868da77499d414f3dcd07e4fbe584dc9a1c30d/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `dc4f37e <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e>`__, 2024-08-05, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e/LICENSE>`__


envoy.compression.brotli.compressor
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `brotli <https://brotli.org>`__, `1.2.0 <https://github.com/google/brotli/releases/tag/v1.2.0>`__, 2025-10-27, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__, `MIT <https://github.com/google/brotli/blob/v1.2.0/LICENSE>`__


envoy.compression.brotli.decompressor
-------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `brotli <https://brotli.org>`__, `1.2.0 <https://github.com/google/brotli/releases/tag/v1.2.0>`__, 2025-10-27, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__, `MIT <https://github.com/google/brotli/blob/v1.2.0/LICENSE>`__


envoy.compression.qatzip.compressor
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LZ4 <http://www.lz4.org/>`__, `1.10.0 <https://github.com/lz4/lz4/releases/tag/v1.10.0>`__, 2024-07-22, , 
  `numactl <https://github.com/numactl/numactl>`__, `2.0.19 <https://github.com/numactl/numactl/releases/tag/v2.0.19>`__, 2024-10-24, , `LGPL-2.1 <https://github.com/numactl/numactl/blob/2.0.19/LICENSE.LGPL2.1>`__
  `qatlib <https://github.com/intel/qatlib>`__, `25.08.0 <https://github.com/intel/qatlib/releases/tag/25.08.0>`__, 2025-07-17, , `BSD-3-Clause <https://github.com/intel/qatlib/blob/25.08.0/LICENSE>`__
  `qatzip <https://github.com/intel/qatzip>`__, `1.3.1 <https://github.com/intel/QATzip/releases/tag/v1.3.1>`__, 2025-04-25, , `BSD-3-Clause <https://github.com/intel/QATzip/blob/v1.3.1/LICENSE>`__


envoy.compression.qatzstd.compressor
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `numactl <https://github.com/numactl/numactl>`__, `2.0.19 <https://github.com/numactl/numactl/releases/tag/v2.0.19>`__, 2024-10-24, , `LGPL-2.1 <https://github.com/numactl/numactl/blob/2.0.19/LICENSE.LGPL2.1>`__
  `QAT-ZSTD-Plugin <https://github.com/intel/QAT-ZSTD-Plugin/>`__, `1.0.0 <https://github.com/intel/QAT-ZSTD-Plugin/releases/tag/v1.0.0>`__, 2025-10-07, , 
  `qatlib <https://github.com/intel/qatlib>`__, `25.08.0 <https://github.com/intel/qatlib/releases/tag/25.08.0>`__, 2025-07-17, , `BSD-3-Clause <https://github.com/intel/qatlib/blob/25.08.0/LICENSE>`__


envoy.compression.zstd.compressor
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `zstd <https://facebook.github.io/zstd>`__, `1.5.7 <https://github.com/facebook/zstd/releases/tag/v1.5.7>`__, 2025-02-19, `cpe:2.3:a:facebook:zstandard:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afacebook%3Azstandard%3A%2A&search_type=all>`__, 


envoy.compression.zstd.decompressor
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `zstd <https://facebook.github.io/zstd>`__, `1.5.7 <https://github.com/facebook/zstd/releases/tag/v1.5.7>`__, 2025-02-19, `cpe:2.3:a:facebook:zstandard:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afacebook%3Azstandard%3A%2A&search_type=all>`__, 


envoy.filters.http.ext_proc
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.filters.http.gcp_authn
----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `b59e807 <https://github.com/google/jwt_verify_lib/tree/b59e8075d4a4f975ba6f109e1916d6e60aeb5613>`__, 2023-05-17, , `Apache-2.0 <https://github.com/google/jwt_verify_lib/blob/b59e8075d4a4f975ba6f109e1916d6e60aeb5613/LICENSE>`__


envoy.filters.http.grpc_field_extraction
----------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `a6e226f <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/a6e226f9a2e656a973df3ad48f0ee5efacce1a28>`__, 2025-05-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/blob/a6e226f9a2e656a973df3ad48f0ee5efacce1a28/LICENSE>`__
  `ocp <https://github.com/opencomputeproject/ocp-diag-core>`__, `e965ac0 <https://github.com/opencomputeproject/ocp-diag-core/tree/e965ac0ac6db6686169678e2a6c77ede904fa82c>`__, 2023-05-05, , `Apache-2.0 <https://github.com/opencomputeproject/ocp-diag-core/blob/e965ac0ac6db6686169678e2a6c77ede904fa82c/LICENSE>`__
  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__
  `proto-field-extraction <https://github.com/grpc-ecosystem/proto-field-extraction>`__, `d5d39f0 <https://github.com/grpc-ecosystem/proto-field-extraction/tree/d5d39f0373e9b6691c32c85929838b1006bcb3fb>`__, 2024-07-10, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-field-extraction/blob/d5d39f0373e9b6691c32c85929838b1006bcb3fb/LICENSE>`__
  `proto_processing_lib <https://github.com/grpc-ecosystem/proto_processing_lib>`__, `279353c <https://github.com/grpc-ecosystem/proto_processing_lib/tree/279353cfab372ac7f268ae529df29c4d546ca18d>`__, 2025-01-10, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto_processing_lib/blob/279353cfab372ac7f268ae529df29c4d546ca18d/LICENSE>`__


envoy.filters.http.grpc_json_reverse_transcoder
-----------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `a6e226f <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/a6e226f9a2e656a973df3ad48f0ee5efacce1a28>`__, 2025-05-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/blob/a6e226f9a2e656a973df3ad48f0ee5efacce1a28/LICENSE>`__
  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.filters.http.grpc_json_transcoder
---------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `a6e226f <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/a6e226f9a2e656a973df3ad48f0ee5efacce1a28>`__, 2025-05-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/blob/a6e226f9a2e656a973df3ad48f0ee5efacce1a28/LICENSE>`__
  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__
  `proto-field-extraction <https://github.com/grpc-ecosystem/proto-field-extraction>`__, `d5d39f0 <https://github.com/grpc-ecosystem/proto-field-extraction/tree/d5d39f0373e9b6691c32c85929838b1006bcb3fb>`__, 2024-07-10, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-field-extraction/blob/d5d39f0373e9b6691c32c85929838b1006bcb3fb/LICENSE>`__
  `proto_processing_lib <https://github.com/grpc-ecosystem/proto_processing_lib>`__, `279353c <https://github.com/grpc-ecosystem/proto_processing_lib/tree/279353cfab372ac7f268ae529df29c4d546ca18d>`__, 2025-01-10, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto_processing_lib/blob/279353cfab372ac7f268ae529df29c4d546ca18d/LICENSE>`__


envoy.filters.http.jwt_authn
----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `b59e807 <https://github.com/google/jwt_verify_lib/tree/b59e8075d4a4f975ba6f109e1916d6e60aeb5613>`__, 2023-05-17, , `Apache-2.0 <https://github.com/google/jwt_verify_lib/blob/b59e8075d4a4f975ba6f109e1916d6e60aeb5613/LICENSE>`__


envoy.filters.http.language
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `ICU Library <https://github.com/unicode-org/icu>`__, `77-1 <https://github.com/unicode-org/icu/releases/tag/release-77-1>`__, 2025-03-13, , `ICU <https://github.com/unicode-org/icu/blob/release-77-1/icu4c/LICENSE>`__


envoy.filters.http.lua
----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LuaJIT <https://luajit.org>`__, `871db2c <https://github.com/LuaJIT/LuaJIT/tree/871db2c84ecefd70a850e03a6c340214a81739f0>`__, 2025-07-24, `cpe:2.3:a:luajit:luajit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aluajit%3Aluajit%3A%2A&search_type=all>`__, `MIT <https://github.com/LuaJIT/LuaJIT/blob/871db2c84ecefd70a850e03a6c340214a81739f0/COPYRIGHT>`__


envoy.filters.http.mcp
----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `a6e226f <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/a6e226f9a2e656a973df3ad48f0ee5efacce1a28>`__, 2025-05-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/blob/a6e226f9a2e656a973df3ad48f0ee5efacce1a28/LICENSE>`__


envoy.filters.http.oauth2
-------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `b59e807 <https://github.com/google/jwt_verify_lib/tree/b59e8075d4a4f975ba6f109e1916d6e60aeb5613>`__, 2023-05-17, , `Apache-2.0 <https://github.com/google/jwt_verify_lib/blob/b59e8075d4a4f975ba6f109e1916d6e60aeb5613/LICENSE>`__


envoy.filters.http.proto_api_scrubber
-------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `a6e226f <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/a6e226f9a2e656a973df3ad48f0ee5efacce1a28>`__, 2025-05-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/blob/a6e226f9a2e656a973df3ad48f0ee5efacce1a28/LICENSE>`__
  `ocp <https://github.com/opencomputeproject/ocp-diag-core>`__, `e965ac0 <https://github.com/opencomputeproject/ocp-diag-core/tree/e965ac0ac6db6686169678e2a6c77ede904fa82c>`__, 2023-05-05, , `Apache-2.0 <https://github.com/opencomputeproject/ocp-diag-core/blob/e965ac0ac6db6686169678e2a6c77ede904fa82c/LICENSE>`__
  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__
  `proto-field-extraction <https://github.com/grpc-ecosystem/proto-field-extraction>`__, `d5d39f0 <https://github.com/grpc-ecosystem/proto-field-extraction/tree/d5d39f0373e9b6691c32c85929838b1006bcb3fb>`__, 2024-07-10, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-field-extraction/blob/d5d39f0373e9b6691c32c85929838b1006bcb3fb/LICENSE>`__
  `proto_processing_lib <https://github.com/grpc-ecosystem/proto_processing_lib>`__, `279353c <https://github.com/grpc-ecosystem/proto_processing_lib/tree/279353cfab372ac7f268ae529df29c4d546ca18d>`__, 2025-01-10, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto_processing_lib/blob/279353cfab372ac7f268ae529df29c4d546ca18d/LICENSE>`__


envoy.filters.http.proto_message_extraction
-------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `a6e226f <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/a6e226f9a2e656a973df3ad48f0ee5efacce1a28>`__, 2025-05-07, , `Apache-2.0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/blob/a6e226f9a2e656a973df3ad48f0ee5efacce1a28/LICENSE>`__
  `ocp <https://github.com/opencomputeproject/ocp-diag-core>`__, `e965ac0 <https://github.com/opencomputeproject/ocp-diag-core/tree/e965ac0ac6db6686169678e2a6c77ede904fa82c>`__, 2023-05-05, , `Apache-2.0 <https://github.com/opencomputeproject/ocp-diag-core/blob/e965ac0ac6db6686169678e2a6c77ede904fa82c/LICENSE>`__
  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__
  `proto-field-extraction <https://github.com/grpc-ecosystem/proto-field-extraction>`__, `d5d39f0 <https://github.com/grpc-ecosystem/proto-field-extraction/tree/d5d39f0373e9b6691c32c85929838b1006bcb3fb>`__, 2024-07-10, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-field-extraction/blob/d5d39f0373e9b6691c32c85929838b1006bcb3fb/LICENSE>`__
  `proto_processing_lib <https://github.com/grpc-ecosystem/proto_processing_lib>`__, `279353c <https://github.com/grpc-ecosystem/proto_processing_lib/tree/279353cfab372ac7f268ae529df29c4d546ca18d>`__, 2025-01-10, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto_processing_lib/blob/279353cfab372ac7f268ae529df29c4d546ca18d/LICENSE>`__


envoy.filters.http.rate_limit_quota
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.filters.http.rbac
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.filters.http.wasm
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c8868da <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c8868da77499d414f3dcd07e4fbe584dc9a1c30d>`__, 2025-11-24, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/c8868da77499d414f3dcd07e4fbe584dc9a1c30d/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `dc4f37e <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e>`__, 2024-08-05, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e/LICENSE>`__


envoy.filters.network.dubbo_proxy
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `hessian2-codec <https://github.com/alibaba/hessian2-codec.git>`__, `6f5a647 <https://github.com/alibaba/hessian2-codec/tree/6f5a64770f0374a761eece13c8863b80dc5adcd8>`__, 2025-01-14, , `Apache-2.0 <https://github.com/alibaba/hessian2-codec/blob/6f5a64770f0374a761eece13c8863b80dc5adcd8/LICENSE>`__


envoy.filters.network.generic_proxy
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `hessian2-codec <https://github.com/alibaba/hessian2-codec.git>`__, `6f5a647 <https://github.com/alibaba/hessian2-codec/tree/6f5a64770f0374a761eece13c8863b80dc5adcd8>`__, 2025-01-14, , `Apache-2.0 <https://github.com/alibaba/hessian2-codec/blob/6f5a64770f0374a761eece13c8863b80dc5adcd8/LICENSE>`__


envoy.filters.network.kafka_broker
----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Kafka (source) <https://kafka.apache.org>`__, `3.9.1 <https://github.com/apache/kafka/releases/tag/3.9.1>`__, 2025-05-12, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/apache/kafka/blob/3.9.1/LICENSE>`__


envoy.filters.network.kafka_mesh
--------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Kafka (C/C++ client) <https://github.com/confluentinc/librdkafka>`__, `2.6.0 <https://github.com/confluentinc/librdkafka/releases/tag/v2.6.0>`__, 2024-10-10, , `librdkafka <https://github.com/confluentinc/librdkafka/blob/v2.6.0/LICENSE>`__
  `Kafka (source) <https://kafka.apache.org>`__, `3.9.1 <https://github.com/apache/kafka/releases/tag/3.9.1>`__, 2025-05-12, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/apache/kafka/blob/3.9.1/LICENSE>`__


envoy.filters.network.mysql_proxy
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, , `MIT <https://github.com/envoyproxy/sql-parser/blob/3b40ba2d106587bdf053a292f7e3bb17e818a57f/LICENSE>`__


envoy.filters.network.postgres_proxy
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, , `MIT <https://github.com/envoyproxy/sql-parser/blob/3b40ba2d106587bdf053a292f7e3bb17e818a57f/LICENSE>`__


envoy.filters.network.rbac
--------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.filters.network.wasm
--------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c8868da <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c8868da77499d414f3dcd07e4fbe584dc9a1c30d>`__, 2025-11-24, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/c8868da77499d414f3dcd07e4fbe584dc9a1c30d/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `dc4f37e <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e>`__, 2024-08-05, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e/LICENSE>`__


envoy.formatter.cel
-------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.generic_proxy.codecs.dubbo
--------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `hessian2-codec <https://github.com/alibaba/hessian2-codec.git>`__, `6f5a647 <https://github.com/alibaba/hessian2-codec/tree/6f5a64770f0374a761eece13c8863b80dc5adcd8>`__, 2025-01-14, , `Apache-2.0 <https://github.com/alibaba/hessian2-codec/blob/6f5a64770f0374a761eece13c8863b80dc5adcd8/LICENSE>`__


envoy.geoip_providers.maxmind
-----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `maxmind_libmaxminddb <https://github.com/maxmind/libmaxminddb>`__, `1.12.2 <https://github.com/maxmind/libmaxminddb/releases/tag/1.12.2>`__, 2025-01-10, `cpe:2.3:a:maxmind:libmaxminddb:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Amaxmind%3Alibmaxminddb%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/maxmind/libmaxminddb/blob/1.12.2/LICENSE>`__


envoy.http.ext_proc.processing_request_modifiers.mapped_attribute_builder
-------------------------------------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.matching.input_matchers.hyperscan
---------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Boost <https://www.boost.org/>`__, `1.84.0 <https://archives.boost.io/release/1.84.0/source/boost_1_84_0.tar.gz>`__, 2023-12-13, `cpe:2.3:a:boost:boost:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aboost%3Aboost%3A%2A&search_type=all>`__, `Boost <https://github.com/boostorg/boost/blob/boost-1.84.0/LICENSE_1_0.txt>`__
  `Colm <https://www.colm.net/open-source/colm/>`__, `2d8ba76 <https://github.com/adrian-thurston/colm/tree/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/colm/blob/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf/COPYING>`__
  `Hyperscan <https://hyperscan.io>`__, `5.4.2 <https://github.com/intel/hyperscan/releases/tag/v5.4.2>`__, 2023-04-19, , `BSD-3-Clause <https://github.com/intel/hyperscan/blob/v5.4.2/LICENSE>`__
  `Ragel <https://www.colm.net/open-source/ragel/>`__, `d4577c9 <https://github.com/adrian-thurston/ragel/tree/d4577c924451b331c73c8ed0af04f6efd35ac0b4>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/ragel/blob/d4577c924451b331c73c8ed0af04f6efd35ac0b4/COPYING>`__
  `Vectorscan <https://www.vectorcamp.gr/vectorscan/>`__, `5.4.11 <https://codeload.github.com/VectorCamp/vectorscan/tar.gz/refs/tags/vectorscan/5.4.11>`__, 2023-11-20, , `BSD-3-Clause <https://github.com/VectorCamp/vectorscan/blob/vectorscan/5.4.11/LICENSE>`__


envoy.matching.inputs.cel_data_input
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.matching.matchers.cel_matcher
-----------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.network.connection_balance.dlb
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Intel Dlb <https://networkbuilders.intel.com/solutionslibrary/queue-management-and-load-balancing-on-intel-architecture>`__, `8.8.0 <https://downloadmirror.intel.com/819078/dlb_linux_src_release_8.8.0.txz>`__, 2023-12-15, , 


envoy.rate_limit_descriptors.expr
---------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.rbac.matchers.upstream_ip_port
------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.regex_engines.hyperscan
-----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Boost <https://www.boost.org/>`__, `1.84.0 <https://archives.boost.io/release/1.84.0/source/boost_1_84_0.tar.gz>`__, 2023-12-13, `cpe:2.3:a:boost:boost:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aboost%3Aboost%3A%2A&search_type=all>`__, `Boost <https://github.com/boostorg/boost/blob/boost-1.84.0/LICENSE_1_0.txt>`__
  `Colm <https://www.colm.net/open-source/colm/>`__, `2d8ba76 <https://github.com/adrian-thurston/colm/tree/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/colm/blob/2d8ba76ddaf6634f285d0a81ee42d5ee77d084cf/COPYING>`__
  `Hyperscan <https://hyperscan.io>`__, `5.4.2 <https://github.com/intel/hyperscan/releases/tag/v5.4.2>`__, 2023-04-19, , `BSD-3-Clause <https://github.com/intel/hyperscan/blob/v5.4.2/LICENSE>`__
  `Ragel <https://www.colm.net/open-source/ragel/>`__, `d4577c9 <https://github.com/adrian-thurston/ragel/tree/d4577c924451b331c73c8ed0af04f6efd35ac0b4>`__, 2021-12-28, , `MIT <https://github.com/adrian-thurston/ragel/blob/d4577c924451b331c73c8ed0af04f6efd35ac0b4/COPYING>`__
  `Vectorscan <https://www.vectorcamp.gr/vectorscan/>`__, `5.4.11 <https://codeload.github.com/VectorCamp/vectorscan/tar.gz/refs/tags/vectorscan/5.4.11>`__, 2023-11-20, , `BSD-3-Clause <https://github.com/VectorCamp/vectorscan/blob/vectorscan/5.4.11/LICENSE>`__


envoy.router.cluster_specifier_plugin.lua
-----------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LuaJIT <https://luajit.org>`__, `871db2c <https://github.com/LuaJIT/LuaJIT/tree/871db2c84ecefd70a850e03a6c340214a81739f0>`__, 2025-07-24, `cpe:2.3:a:luajit:luajit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aluajit%3Aluajit%3A%2A&search_type=all>`__, `MIT <https://github.com/LuaJIT/LuaJIT/blob/871db2c84ecefd70a850e03a6c340214a81739f0/COPYRIGHT>`__


envoy.stat_sinks.wasm
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c8868da <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c8868da77499d414f3dcd07e4fbe584dc9a1c30d>`__, 2025-11-24, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/c8868da77499d414f3dcd07e4fbe584dc9a1c30d/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `dc4f37e <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e>`__, 2024-08-05, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e/LICENSE>`__


envoy.string_matcher.lua
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `LuaJIT <https://luajit.org>`__, `871db2c <https://github.com/LuaJIT/LuaJIT/tree/871db2c84ecefd70a850e03a6c340214a81739f0>`__, 2025-07-24, `cpe:2.3:a:luajit:luajit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aluajit%3Aluajit%3A%2A&search_type=all>`__, `MIT <https://github.com/LuaJIT/LuaJIT/blob/871db2c84ecefd70a850e03a6c340214a81739f0/COPYRIGHT>`__


envoy.tls.key_providers.cryptomb
--------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `libipp-crypto <https://github.com/intel/cryptography-primitives>`__, `1.3.0 <https://github.com/intel/cryptography-primitives/releases/tag/v1.3.0>`__, 2025-10-01, `cpe:2.3:a:intel:cryptography_for_intel_integrated_performance_primitives:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aintel%3Acryptography_for_intel_integrated_performance_primitives%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/intel/cryptography-primitives/blob/ippcp_1.3.0/LICENSE>`__


envoy.tls.key_providers.kae
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `uadk <https://github.com/Linaro/uadk>`__, `2.9 <https://github.com/Linaro/uadk/releases/tag/v2.9>`__, 2025-06-20, , `Apache-2.0 <https://github.com/Linaro/uadk/blob/v2.9/LICENSE>`__


envoy.tls.key_providers.qat
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `numactl <https://github.com/numactl/numactl>`__, `2.0.19 <https://github.com/numactl/numactl/releases/tag/v2.0.19>`__, 2024-10-24, , `LGPL-2.1 <https://github.com/numactl/numactl/blob/2.0.19/LICENSE.LGPL2.1>`__
  `qatlib <https://github.com/intel/qatlib>`__, `25.08.0 <https://github.com/intel/qatlib/releases/tag/25.08.0>`__, 2025-07-17, , `BSD-3-Clause <https://github.com/intel/qatlib/blob/25.08.0/LICENSE>`__


envoy.tracers.opentelemetry
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.tracers.opentelemetry.samplers.cel
----------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.14.0 <https://github.com/google/cel-cpp/releases/tag/v0.14.0>`__, 2025-11-17, , `Apache-2.0 <https://github.com/google/cel-cpp/blob/v0.14.0/LICENSE>`__
  `Common Expression Language (CEL) spec <https://opensource.google/projects/cel>`__, `0.25.0 <https://github.com/google/cel-spec/releases/tag/v0.25.0>`__, 2025-10-31, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.25.0/LICENSE>`__
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `25.12.19 <https://github.com/google/flatbuffers/releases/tag/v25.12.19>`__, 2025-12-19, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/google/flatbuffers/blob/v25.12.19/LICENSE>`__


envoy.transport_sockets.alts
----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Protobuf and gRPC rules for Bazel <https://github.com/rules-proto-grpc/rules_proto_grpc>`__, `4.6.0 <https://github.com/rules-proto-grpc/rules_proto_grpc/releases/tag/4.6.0>`__, 2023-12-14, , `Apache-2.0 <https://github.com/rules-proto-grpc/rules_proto_grpc/blob/4.6.0/LICENSE>`__


envoy.wasm.runtime.null
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c8868da <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c8868da77499d414f3dcd07e4fbe584dc9a1c30d>`__, 2025-11-24, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/c8868da77499d414f3dcd07e4fbe584dc9a1c30d/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `dc4f37e <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e>`__, 2024-08-05, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e/LICENSE>`__


envoy.wasm.runtime.v8
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Conversion to/from half-precision floating point formats <https://github.com/Maratyszcza/FP16>`__, `0a92994 <https://github.com/Maratyszcza/FP16/tree/0a92994d729ff76a58f692d3028ca1b64b145d91>`__, 2021-03-20, , 
  `Dragonbox <https://github.com/jk-jeon/dragonbox>`__, `6c7c925 <https://github.com/jk-jeon/dragonbox/tree/6c7c925b571d54486b9ffae8d9d18a822801cbda>`__, 2024-10-28, , 
  `Efficient and performance-portable vector software <https://github.com/google/highway>`__, `1.2.0 <https://github.com/google/highway/releases/tag/1.2.0>`__, 2024-05-31, , 
  `fast_float number parsing library <https://github.com/fastfloat/fast_float>`__, `7.0.0 <https://github.com/fastfloat/fast_float/releases/tag/v7.0.0>`__, 2024-11-21, , 
  `Intel ITT API <https://github.com/intel/ittapi>`__, `a3911ff <https://github.com/intel/ittapi/tree/a3911fff01a775023a06af8754f9ec1e5977dd97>`__, 2021-05-25, , 
  `Unicode validation and transcoding at billions of characters per second <https://github.com/simdutf/simdutf>`__, `7.3.4 <https://github.com/simdutf/simdutf/releases/tag/v7.3.4>`__, 2025-08-01, , 
  `V8 <https://v8.dev>`__, `13.8.258.26 <https://github.com/v8/v8/releases/tag/13.8.258.26>`__, 2025-07-09, `cpe:2.3:a:google:v8:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Av8%3A%2A&search_type=all>`__, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c8868da <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c8868da77499d414f3dcd07e4fbe584dc9a1c30d>`__, 2025-11-24, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/c8868da77499d414f3dcd07e4fbe584dc9a1c30d/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `dc4f37e <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e>`__, 2024-08-05, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e/LICENSE>`__


envoy.wasm.runtime.wamr
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c8868da <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c8868da77499d414f3dcd07e4fbe584dc9a1c30d>`__, 2025-11-24, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/c8868da77499d414f3dcd07e4fbe584dc9a1c30d/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `dc4f37e <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e>`__, 2024-08-05, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e/LICENSE>`__
  `Webassembly Micro Runtime <https://github.com/bytecodealliance/wasm-micro-runtime>`__, `WAMR-2.4.4 <https://github.com/bytecodealliance/wasm-micro-runtime/releases/tag/WAMR-2.4.4>`__, 2025-11-24, , `Apache-2.0 <https://github.com/bytecodealliance/wasm-micro-runtime/blob/WAMR-2.4.4/LICENSE>`__


envoy.wasm.runtime.wasmtime
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `0.68.1 <https://github.com/bazelbuild/rules_rust/releases/tag/0.68.1>`__, 2025-12-10, , `Apache-2.0 <https://github.com/bazelbuild/rules_rust/blob/0.68.1/LICENSE.txt>`__
  `wasmtime <https://github.com/bytecodealliance/wasmtime>`__, `24.0.4 <https://github.com/bytecodealliance/wasmtime/releases/tag/v24.0.4>`__, 2025-07-18, `cpe:2.3:a:bytecodealliance:wasmtime:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Abytecodealliance%3Awasmtime%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/bytecodealliance/wasmtime/blob/v24.0.4/LICENSE>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c8868da <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c8868da77499d414f3dcd07e4fbe584dc9a1c30d>`__, 2025-11-24, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/blob/c8868da77499d414f3dcd07e4fbe584dc9a1c30d/LICENSE>`__
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `dc4f37e <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e>`__, 2024-08-05, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/blob/dc4f37efacd2ff7bf2e8f36632f22e1e99347f3e/LICENSE>`__

